kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: fictions-app
  labels:
    name: fictions-app
    environment: development
